# top-1M-jarm-v2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: rust.yml
nomad/: README.md  compute.nomad.hcl  redis.nomad.hcl  scheduler.nomad.hcl  uploader.nomad.hcl  worker.nomad.hcl
nomad/cluster-setup/: README.md  image.pkr.hcl  main.tf  variables.hcl  variables.tf  versions.tf
nomad/cluster-setup/shared/config/: nomad-acl-user.hcl  nomad.hcl
nomad/cluster-setup/shared/scripts/: setup.sh
run_configurations/: Run scheduler.run.xml  Run uploader DRY RUN.run.xml  Run worker DRY RUN.run.xml  Run worker.run.xml
src/: lib.rs  main.rs
src/queue/: mod.rs
src/storage/: mod.rs
test/: top-1m.csv
