[package]
name = "top-1m-jarm-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
redis = "0.23.3"
rust_jarm = "0.3.3"
clap = { version = "4.4.7", features = ["derive"] }
env_logger = { version = "0.10.0", features = [] }
log = "0.4.20"
rust-s3 = { version = "0.33.0", features = ["blocking"] }
tempfile = { version = "3.8.1", features = [] }
reqwest = { version = "0.11.22", features = ["blocking"] }
zip = "0.6.6"
