[package]
name = "top-1m-jarm-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
redis = "0.32.7"
rust_jarm = "0.3.3"
clap = { version = "4.4.7", features = ["derive"] }
env_logger = { version = "0.11.8", features = [] }
log = "0.4.20"
rust-s3 = { version = "0.37.0", features = ["blocking"] }
tempfile = { version = "3.8.1", features = [] }
reqwest = { version = "0.12.23", features = ["blocking"] }
zip = "5.1.1"
sentry = { version = "0.43.0", features = [] }
sentry-log = { version = "0.43.0", features = [] }

[profile.release]
debug = "full"
